--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -16,7 +16,12 @@ import { redirects } from '../data/redirects';
     </div>
   </section>
 
-  <script type="application/json" id="redirect-data" is:inline>{JSON.stringify(Object.entries(redirects))}</script>
+  <script
+    type="application/json"
+    id="redirect-data"
+    set:html={JSON.stringify(Object.entries(redirects))}
+    is:inline
+  ></script>
 
   <script type="module" is:inline>
     const redirectEntries = JSON.parse(document.getElementById('redirect-data')?.textContent ?? '[]');
@@ -42,6 +47,7 @@ import { redirects } from '../data/redirects';
           return;
         }
       }
+      console.log('No matching redirect found in redirects data.'+path);
 
       if (/^\/(\d{4})\/(\d{2})\/(\d{2})(?:\/.*)?$/.test(path) && !path.startsWith('/news/')) {
         redirectTo(`/news${path}`);
@@ -49,7 +55,7 @@ import { redirects } from '../data/redirects';
       }
 
       if (path.startsWith('/donate/') && path !== '/donate/') {
-        redirectTo('/donate/');
+        redirectTo('/support/');
         return;
       }
 
